k8s/quickcart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quickcart-service
spec:
  type: ClusterIP
  selector:
    app: quickcart
  ports:
    - port: 80
      targetPort: 80
